--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,9 @@
-<app-header></app-header>
-<div class="container">
-    <router-outlet />
+<div class="d-flex flex-column min-vh-100">
+    <app-header></app-header>
+    <div class="wavy-bg py-4">
+        <div class="container">
+            <router-outlet />
+        </div>
+    </div>
+    <app-footer class="mt-auto"></app-footer>
 </div>
-<app-footer></app-footer>
