--- a/src/app/layout/footer/footer.component.html
+++ b/src/app/layout/footer/footer.component.html
@@ -1,1 +1,21 @@
-<p>footer works!</p>
+<footer class="wavy-bg-footer bg-primary d-flex flex-wrap justify-content-between align-items-center py-3 mt-4">
+    <div class="container">
+        <div class="col-md-4 d-flex align-items-center">
+            <!-- <a href="/" class="mb-3 me-2 mb-md-0 text-body-secondary text-decoration-none lh-1">
+            <svg class="bi" width="30" height="24">
+                <use xlink:href="#bootstrap"></use>
+            </svg>
+        </a> -->
+            <span class="mb-3 mb-md-0 text-white">© {{year}} Ahmed</span>
+        </div>
+
+        <!-- <ul class="nav col-md-4 justify-content-end list-unstyled d-flex">
+        <li class="ms-3">
+            <a class="text-body-secondary" href="#">
+                test
+            </a>
+        </li>
+    </ul> -->
+    </div>
+
+</footer>
