--- a/src/app/layout/header/header.component.html
+++ b/src/app/layout/header/header.component.html
@@ -1,16 +1,18 @@
-<div class="container">
-    <header class="d-flex flex-wrap justify-content-center py-3 mb-4 border-bottom">
-        <a href="/" class="d-flex align-items-center mb-3 mb-md-0 me-md-auto link-body-emphasis text-decoration-none">
-            <svg class="bi me-2" width="40" height="32">
-                <use xlink:href="#bootstrap"></use>
-            </svg>
-            <span class="fs-4">Benefit QR Generator</span>
-        </a>
+<div class="border-bottom">
+    <div class="container">
+        <header class="d-flex flex-wrap justify-content-center py-3 ">
+            <a href="/" class="d-flex align-items-center mb-3 mb-md-0 me-md-auto link-body-emphasis text-decoration-none">
+                <svg class="bi me-2" width="40" height="32">
+                    <use xlink:href="#bootstrap"></use>
+                </svg>
+                <span class="fs-4">Benefit QR Generator</span>
+            </a>
 
-        <ul class="nav nav-pills">
-            <li class="nav-item"><a class="nav-link" routerLink="/home" routerLinkActive="active" ariaCurrentWhenActive="page">Home</a></li>
-            <li class="nav-item"><a class="nav-link" routerLink="/about" routerLinkActive="active" ariaCurrentWhenActive="page">About</a></li>
-            <li class="nav-item"><a class="nav-link" routerLink="/generate-qr" routerLinkActive="active" ariaCurrentWhenActive="page">Generate QR</a></li>
-        </ul>
-    </header>
+            <ul class="nav nav-pills">
+                <li class="nav-item"><a class="nav-link" routerLink="/home" routerLinkActive="active" ariaCurrentWhenActive="page">Home</a></li>
+                <li class="nav-item"><a class="nav-link" routerLink="/about" routerLinkActive="active" ariaCurrentWhenActive="page">About</a></li>
+                <li class="nav-item"><a class="nav-link" routerLink="/generate-qr" routerLinkActive="active" ariaCurrentWhenActive="page">Generate QR</a></li>
+            </ul>
+        </header>
+    </div>
 </div>
