--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,5 +1,5 @@
 .wavy-bg {
-    background-image: url('/assets/Wavy-Body.svg');
+    background: linear-gradient(to bottom, rgba(255, 255, 255, 0), rgba(255, 255, 255, 100)), url('/assets/Wavy-Body.svg');
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
