--- a/src/app/pages/generate-qr/generate-qr.component.html
+++ b/src/app/pages/generate-qr/generate-qr.component.html
@@ -1,41 +1,52 @@
 <div class="row">
     <div class="col-6">
-        @if(!!generatedData) {
-        <qrcode [qrdata]="generatedData" [width]="256" [errorCorrectionLevel]="'M'"></qrcode>
-        } @else {
-        Submit to see qr
-        }
+        <div class="card">
+            <div class="card-body text-center">
+                @if(!!generatedData) {
+                <qrcode [qrdata]="generatedData" [width]="256" [errorCorrectionLevel]="'M'"></qrcode>
+                } @else {
+                <span class="text-muted m-5">Fill in the form to generate a QR code</span>
+                }
+            </div>
+        </div>
     </div>
     <div class="col-6">
-        <form [formGroup]="ibanForm" (ngSubmit)="onSubmit()">
-            <div class="form-group">
-                <label for="iban">IBAN</label>
-                <input type="text" formControlName="iban" class="form-control" [class]="{'is-invalid': submit && ibanForm.get('iban')?.invalid}" id="iban" placeholder="IBAN">
-                @if(submit && ibanForm.invalid) {
-                @if(iban?.hasError('required')) {
-                <div class="invalid-feedback">
-                    This field is required.
-                </div>
-                }
-                @if(iban?.hasError('invalidIban')) {
-                <div class="invalid-feedback">
-                    Entered IBAN is invalid
-                </div>
-                }
-                }
-            </div>
+        <div class="card">
+            <div class="card-body">
+                <form [formGroup]="ibanForm" (ngSubmit)="onSubmit()" class="row gy-2">
+                    <div class="col-12">
+                        <label for="iban">IBAN</label>
+                        <input type="text" formControlName="iban" class="form-control" [class]="{'is-invalid': submit && ibanForm.get('iban')?.invalid}" id="iban" placeholder="IBAN">
+                        <div id="ibanHelp" class="form-text">International Bank Account Number</div>
+                        @if(submit && ibanForm.invalid) {
+                        @if(iban?.hasError('required')) {
+                        <div class="invalid-feedback">
+                            This field is required.
+                        </div>
+                        }
+                        @if(iban?.hasError('invalidIban')) {
+                        <div class="invalid-feedback">
+                            Entered IBAN is invalid
+                        </div>
+                        }
+                        }
+                    </div>
 
-            <div class="form-group">
-                <label for="amount">Amount</label>
-                <input type="text" formControlName="amount" class="form-control" [class]="{'is-invalid': submit && ibanForm.get('amount')?.invalid}" id="amount" placeholder="Amount (BHD)">
-                @if(submit && iban?.hasError('required')) {
-                <div class="invalid-feedback">
-                    This field is required.
-                </div>
-                }
+                    <div class="col-12">
+                        <label for="amount">Amount</label>
+                        <input type="text" formControlName="amount" class="form-control" [class]="{'is-invalid': submit && ibanForm.get('amount')?.invalid}" id="amount" placeholder="Amount (BHD)">
+                        @if(submit && iban?.hasError('required')) {
+                        <div class="invalid-feedback">
+                            This field is required.
+                        </div>
+                        }
+                    </div>
+                    <div class="col">
+                        <button type="submit" class="btn btn-primary">Submit</button>
+                    </div>
+                </form>
             </div>
-            <br />
-            <button type="submit" class="btn btn-primary">Submit</button>
-        </form>
+        </div>
+
     </div>
 </div>
