--- a/src/app/pages/generate-qr/generate-qr.component.html
+++ b/src/app/pages/generate-qr/generate-qr.component.html
@@ -36,7 +36,7 @@
                     <div class="col-12">
                         <label for="amount">Amount</label>
                         <input type="text" formControlName="amount" class="form-control" [class]="{'is-invalid': submit && ibanForm.get('amount')?.invalid}" id="amount" placeholder="Amount (BHD)">
-                        @if(submit && iban?.hasError('required')) {
+                        @if(submit && amount?.hasError('required')) {
                         <div class="invalid-feedback">
                             This field is required.
                         </div>
