--- a/src/app/pages/generate-qr/components/generated-qr-code-display/generated-qr-code-display.component.html
+++ b/src/app/pages/generate-qr/components/generated-qr-code-display/generated-qr-code-display.component.html
@@ -1,1 +1,7 @@
-<qrcode [qrdata]="qrData | json" [width]="256" [errorCorrectionLevel]="'M'"></qrcode>
+@if(!!qrData.header) {
+{{qrData.header}}
+}
+<qrcode [qrdata]="populateQrCode(qrData)" [width]="256" [errorCorrectionLevel]="'M'"></qrcode>
+@if(!!qrData.footer) {
+{{qrData.footer}}
+}
