addition of page size dropdown

--- a/src/app/pages/generate-qr/components/form-input/form-input.component.html
+++ b/src/app/pages/generate-qr/components/form-input/form-input.component.html
@@ -37,6 +37,14 @@
         <input type="text" formControlName="footer" class="form-control" placeholder="Optional">
         <div id="footer" class="form-text">Will be displayed below the QR code</div>
     </div>
+    <div class="col-12">
+        <label for="pageSize">Page Size</label>
+        <select class="form-select" formControlName="pageSize">
+            <option [value]="qrDisplaySizeEnum.A3">A3 (297 x 420mm)</option>
+            <option [value]="qrDisplaySizeEnum.A4">A4 (210 x 297mm)</option>
+            <option [value]="qrDisplaySizeEnum.A5">A5 (148 x 210mm)</option>
+        </select>
+    </div>
     <div class="col">
         <button type="submit" class="btn btn-primary">Submit</button>
     </div>
