--- a/src/app/pages/generate-qr/components/generated-qr-code-display/generated-qr-code-display.component.scss
+++ b/src/app/pages/generate-qr/components/generated-qr-code-display/generated-qr-code-display.component.scss
@@ -1,3 +1,11 @@
 .print-aspect-ratio {
     aspect-ratio: 1/1.4142;
 }
+
+.blur {
+    filter: blur(5px);
+}
+
+.width-300px {
+    width: 300px;
+}
