--- a/src/app/pages/generate-qr/components/generated-qr-code-display/generated-qr-code-display.component.html
+++ b/src/app/pages/generate-qr/components/generated-qr-code-display/generated-qr-code-display.component.html
@@ -2,18 +2,18 @@
     <div class="w-100">
         @if(!!qrData.header) {
         <div class="bg-primary p-2">
-            <h4 class="text-white">{{qrData.header}}</h4>
+            <h5 class="text-white mb-0">{{qrData.header}}</h5>
         </div> }
     </div>
     <div [class]="{'blur': qrData.iban == ''}">
         <qrcode [width]="140" [qrdata]="populateQrCode(qrData)" [elementType]="'svg'" [errorCorrectionLevel]="'M'"></qrcode>
-        @if(qrData.showIban) {
-        <h5>{{qrData.iban}}</h5> }
+        @if(qrData.showIban && !!qrData.iban) {
+        <h6>{{qrData.iban}}</h6> }
     </div>
     @if(!!qrData.footer) {
-    <h4>{{qrData.footer}}</h4>
+    <h5 class="p-2 mb-0">{{qrData.footer}}</h5>
     }
-    <div class="bg-secondary w-100 p-2">
-        <small class="text-white">Generated with <b>benefit.ahmed.plus</b></small>
+    <div class="bg-secondary w-100 p-1 d-flex justify-content-center align-items-center">
+        <small class="text-white font-size-10px">Generated with <b>benefit.ahmed.plus</b></small>
     </div>
 </div>
