--- a/src/app/layout/footer/footer.component.html
+++ b/src/app/layout/footer/footer.component.html
@@ -1,21 +1,23 @@
 <footer class="wavy-bg-footer bg-primary d-flex flex-wrap justify-content-between align-items-center py-3 mt-4">
     <div class="container">
-        <div class="col-md-4 d-flex align-items-center">
-            <!-- <a href="/" class="mb-3 me-2 mb-md-0 text-body-secondary text-decoration-none lh-1">
-            <svg class="bi" width="30" height="24">
-                <use xlink:href="#bootstrap"></use>
-            </svg>
-        </a> -->
-            <span class="mb-3 mb-md-0 text-white">© {{year}} Ahmed</span>
+        <div class="row g-5">
+            <div class="col-md-8 col-12 text-white">
+                <h5>Benefit QR Generator</h5>
+                <p>
+                    benefit.ahmed.plus is a free service to allow you to gerenate QR codes for your various payment needs.
+                </p>
+                <p class="mb-0">
+                    This website is open source and available on <a class="text-white" href="https://github.com/ahmedaatif/benefit-qr-generator" target="_blank">GitHub</a>. Contribution is welcome!
+                </p>
+            </div>
+            <div class="col-md-4 col-12 d-flex align-items-center">
+                <span class="mb-3 mb-md-0 text-white">© {{year}}
+                    <a class="text-white" href="https://ahmed.plus" target="_blank">ahmed.plus</a>
+                </span>
+            </div>
+
         </div>
 
-        <!-- <ul class="nav col-md-4 justify-content-end list-unstyled d-flex">
-        <li class="ms-3">
-            <a class="text-body-secondary" href="#">
-                test
-            </a>
-        </li>
-    </ul> -->
     </div>
 
 </footer>
