--- a/src/app/layout/footer/footer.component.html
+++ b/src/app/layout/footer/footer.component.html
@@ -1,6 +1,6 @@
 <footer class="wavy-bg-footer bg-primary d-flex flex-wrap justify-content-between align-items-center py-3 mt-4">
     <div class="container">
-        <div class="row g-5">
+        <div class="row gy-5">
             <div class="col-md-8 col-12 text-white">
                 <h5>Benefit QR Generator</h5>
                 <p>
